# vectorize-clients

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  .travis.yml  README.md  generate-python.sh  openapi.json  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini  vectorize_api.json
.github/workflows/: ci.yml  docs.yml  python-release.yml  python.yml  release-python.yml  release-ts.yml
.openapi-generator/: FILES
clients/python/: README.md  pyproject.toml
docs/: AIPlatform.md  AIPlatformConfigSchema.md  AIPlatformInput.md  AIPlatformSchema.md  AIPlatformType.md  AWSS3AuthConfig.md  AWSS3Config.md  AZUREAISEARCHAuthConfig.md  AZUREAISEARCHConfig.md  AZUREBLOBAuthConfig.md  AZUREBLOBConfig.md  AddUserFromSourceConnectorResponse.md  AddUserToSourceConnectorRequest.md  AddUserToSourceConnectorRequestSelectedFiles.md  AddUserToSourceConnectorRequestSelectedFilesAnyOf.md  AddUserToSourceConnectorRequestSelectedFilesAnyOfValue.md  AddUserToSourceConnectorRequestSelectedFilesValue.md  AdvancedQuery.md  AmazonS3.md  AmazonS31.md  AmazonS32.md  AzureBlobStorage.md  AzureBlobStorage1.md  AzureBlobStorage2.md  Azureaisearch.md  Azureaisearch1.md  Azureaisearch2.md  BEDROCKAuthConfig.md  Bedrock.md  Bedrock1.md  Bedrock2.md  CAPELLAAuthConfig.md  CAPELLAConfig.md  CONFLUENCEAuthConfig.md  CONFLUENCEConfig.md  Capella.md  Capella1.md  Capella2.md  Confluence.md  Confluence1.md  (+255 more)
scripts/: editToml.js  fix-ts-unions.js  generate-docs.sh  generate-python.sh  generate-ts.sh  python_README.md  readToml.js  release-python.sh  release-ts.sh
src/python/: README.md  pyproject.toml
src/python/vectorize_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/python/vectorize_client/api/: __init__.py  ai_platform_connectors_api.py  connectors_api.py  destination_connectors_api.py  extraction_api.py  files_api.py  pipelines_api.py  source_connectors_api.py  uploads_api.py  workspaces_api.py
src/python/vectorize_client/models/: __init__.py  add_user_from_source_connector_response.py  add_user_to_source_connector_request.py  add_user_to_source_connector_request_selected_files.py  add_user_to_source_connector_request_selected_files_any_of.py  add_user_to_source_connector_request_selected_files_any_of_value.py  add_user_to_source_connector_request_selected_files_value.py  advanced_query.py  ai_platform.py  ai_platform_config_schema.py  ai_platform_connector.py  ai_platform_connector_input.py  ai_platform_connector_schema.py  ai_platform_connector_type.py  ai_platform_schema.py  ai_platform_type.py  ai_platform_type_for_pipeline.py  anthropic.py  anthropic1.py  anthropic_auth_config.py  aws_s3.py  aws_s31.py  awss3_auth_config.py  awss3_config.py  azure_blob.py  azure_blob1.py  azureaisearch.py  azureaisearch1.py  azureaisearch_auth_config.py  azureaisearch_config.py  azureblob_auth_config.py  azureblob_config.py  bedrock.py  bedrock1.py  bedrock_auth_config.py  capella.py  capella1.py  capella_auth_config.py  capella_config.py  confluence.py  (+244 more)
src/ts/: README.md  package-lock.json  package.json
test/: test_add_user_from_source_connector_response.py  test_add_user_to_source_connector_request.py  test_add_user_to_source_connector_request_selected_files.py  test_add_user_to_source_connector_request_selected_files_any_of.py  test_add_user_to_source_connector_request_selected_files_any_of_value.py  test_add_user_to_source_connector_request_selected_files_value.py  test_advanced_query.py  test_ai_platform.py  test_ai_platform_config_schema.py  test_ai_platform_input.py  test_ai_platform_schema.py  test_ai_platform_type.py  test_amazon_s3.py  test_amazon_s31.py  test_amazon_s32.py  test_awss3_auth_config.py  test_awss3_config.py  test_azure_blob_storage.py  test_azure_blob_storage1.py  test_azure_blob_storage2.py  test_azureaisearch.py  test_azureaisearch1.py  test_azureaisearch2.py  test_azureaisearch_auth_config.py  test_azureaisearch_config.py  test_azureblob_auth_config.py  test_azureblob_config.py  test_bedrock.py  test_bedrock1.py  test_bedrock2.py  test_bedrock_auth_config.py  test_capella.py  test_capella1.py  test_capella2.py  test_capella_auth_config.py  test_capella_config.py  test_confluence.py  test_confluence1.py  test_confluence2.py  test_confluence_auth_config.py  (+256 more)
tests/python/: pyproject.toml
tests/python/tests/: test_client.py  test_pipelines.py
tests/ts/: package-lock.json  package.json  tsconfig.json
vectorize_client/: __init__.py  rest.py
(+661 files in other folders)
