[tool.poetry]
name = "vectorize-client"
version = "0.1.3"
description = "Python client for the Vectorize API"
authors = [ "Vectorize <contact@vectorize.io>" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vectorize-io/vectorize-clients"
keywords = [
  "vectorize",
  "vectorize.io",
  "generative-ai",
  "embeddings",
  "rag"
]
include = [ "vectorize_client/py.typed" ]
homepage = "https://vectorize.io"

  [tool.poetry.dependencies]
  python = "^3.8"
  urllib3 = ">= 1.25.3, < 3.0.0"
  python-dateutil = ">= 2.8.2"
  pydantic = ">= 2"
  typing-extensions = ">= 4.7.1"

  [tool.poetry.dev-dependencies]
  pytest = ">= 7.2.1"
  pytest-cov = ">= 2.8.1"
  tox = ">= 3.9.0"
  flake8 = ">= 4.0.0"
  types-python-dateutil = ">= 2.8.19.14"
  mypy = ">= 1.5"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [ "vectorize_client", "tests" ]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

  [[tool.mypy.overrides]]
  module = [ "vectorize_client.configuration" ]
  warn_unused_ignores = true
  strict_equality = true
  extra_checks = true
  check_untyped_defs = true
  disallow_subclassing_any = true
  disallow_untyped_decorators = true
  disallow_any_generics = true
  disallow_untyped_calls = true
  disallow_incomplete_defs = true
  disallow_untyped_defs = true
  no_implicit_reexport = true
  warn_return_any = true

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"
