[project]
name = "vectorize_client"
version = "1.0.0"
description = "Vectorize API (Beta)"
license = "NoLicense"
readme = "README.md"
keywords = [ "OpenAPI", "OpenAPI-Generator", "Vectorize API (Beta)" ]
requires-python = ">=3.9"
dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)"
]

  [[project.authors]]
  name = "Vectorize"
  email = "team@openapitools.org"

  [project.urls]
  Repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.3.0"
name = "vectorize-client"
description = "Python client for the Vectorize API"
authors = [ "Vectorize <contact@vectorize.io>" ]
license = "MIT"
repository = "https://github.com/vectorize-io/vectorize-clients"
homepage = "https://vectorize.io"
keywords = [
  "vectorize",
  "vectorize.io",
  "generative-ai",
  "embeddings",
  "rag"
]

[tool.poetry.group.dev.dependencies]
pytest = ">= 7.2.1"
pytest-cov = ">= 2.8.1"
tox = ">= 3.9.0"
flake8 = ">= 4.0.0"
types-python-dateutil = ">= 2.8.19.14"
mypy = ">= 1.5"

[tool.pylint."MESSAGES CONTROL"]
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [ "vectorize_client", "tests" ]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

  [[tool.mypy.overrides]]
  module = [ "vectorize_client.configuration" ]
  warn_unused_ignores = true
  strict_equality = true
  extra_checks = true
  check_untyped_defs = true
  disallow_subclassing_any = true
  disallow_untyped_decorators = true
  disallow_any_generics = true
  disallow_untyped_calls = true
  disallow_incomplete_defs = true
  disallow_untyped_defs = true
  no_implicit_reexport = true
  warn_return_any = true

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"
